# floodmaps

./: README.md  environment.yml  pyproject.toml  rasters.py  sample.py  sample_job.sh  sample_mpc.py  sample_mpc_v2.py  unet.ipynb
configs/: README.md  config.yaml  s1_cvae_train_ddp_inference.yaml  s1_template.yaml  s1_unetpp_all_best.yaml  s2_template.yaml
configs/ad/: s1_cvae_train_ddp_tuning.yaml
configs/benchmarking/: benchmark_despeckling.yaml  benchmark_s2.yaml  benchmark_sar.yaml
configs/inference/: download_area.yaml  inference_s2.yaml  inference_sar.yaml  weak_labels.yaml
configs/paths/: default.yaml
configs/preprocess/: cvae_despeckle.yaml  (+4 more)
envs/: floodmaps-sampling.yml  floodmaps-training.yml  floodmaps-tuning.yml
notebooks/: label_locations.ipynb  unet.ipynb
sampling/: README.md  add_cloud_label.py  download_area.py  get_prism.py  get_supplementary.py  sample_custom.py  sample_mpc.py  sample_mpc.sh  sample_s1.py  sample_s2.py  sample_s2_s1.py  sample_sar_improv.pbs  sample_sar_multi.py
src/: benchmark.py  benchmark_s2.py  benchmark_sar.py  config.py  dataset.py  inference.pbs  inference.py  loss.py  model.py  preprocess.py  preprocess_ad.py  preprocess_s2.py  preprocess_sar.pbs  preprocess_sar.py  shiftanalysis.ipynb  train_ad_head.py  train_classifier.py  train_discriminator.py  train_job.sh  train_sar.py  train_sar.sh  tuning_ad.py  tuning_classifier.py  tuning_classifier.sh  tuning_discriminator.py  tuning_discriminator.sh  tuning_unet.py  tuning_unet.sh  tuning_unet_plus.py  tuning_unet_plus.sh  utils.py  weak_labels.pbs  weak_labels.py
(+157 files in other folders)
